gen/gen/GramParser.java
// Generated from C:/Users/Project_X/gitKraken/CompilerConstruction/src\Gram.g4 by ANTLR 4.7.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ARRAY=2, BEGIN=3, CASE=4, CONST=5, DIV=6, DO=7, DOWNTO=8, ELSE=9, 
		END=10, FILE=11, FOR=12, FUNCTION=13, GOTO=14, IF=15, IN=16, LABEL=17, 
		MOD=18, NIL=19, NOT=20, OF=21, OR=22, PACKED=23, PROCEDURE=24, PROGRAM=25, 
		RECORD=26, REPEAT=27, SET=28, THEN=29, TO=30, TYPE=31, UNTIL=32, VAR=33, 
		WHILE=34, WITH=35, PLUS=36, MINUS=37, STAR=38, SLASH=39, EQUAL=40, LESS=41, 
		GREATER=42, LBRACKET=43, RBRACKET=44, DOT=45, COMMA=46, COLON=47, SEMICOLON=48, 
		POINTER=49, LPARENTHESE=50, RPARENTHESE=51, NOTEQUAL=52, LESSEQUAL=53, 
		GREATEREQUAL=54, ASSIGN=55, DOTDOT=56, LBRACE=57, RBRACE=58, NUM_INT=59, 
		NUM_REAL=60, STRING_LITERAL=61, IDENT=62, COMMENT1=63, COMMENT2=64, WS=65;
	public static final int
		RULE_startRule = 0, RULE_identifier = 1, RULE_directive = 2, RULE_unsignedNumber = 3, 
		RULE_sign = 4, RULE_block = 5, RULE_labelDeclarationPart = 6, RULE_label = 7, 
		RULE_constantDefinitionPart = 8, RULE_constantDefinition = 9, RULE_constant = 10, 
		RULE_constantIdentifier = 11, RULE_typeDefinitionPart = 12, RULE_typeDefinition = 13, 
		RULE_typeDenoter = 14, RULE_newType = 15, RULE_simpleTypeIdentifier = 16, 
		RULE_structuredTypeIdentifier = 17, RULE_pointerTypeIdentifier = 18, RULE_typeIdentifier = 19, 
		RULE_simpleType = 20, RULE_ordinalType = 21, RULE_newOrdinalType = 22, 
		RULE_ordinalTypeIdentifier = 23, RULE_realTypeIdentifier = 24, RULE_enumeratedType = 25, 
		RULE_identifierList = 26, RULE_subrangeType = 27, RULE_structuredType = 28, 
		RULE_newStructuredType = 29, RULE_unpackedStructuredType = 30, RULE_arrayType = 31, 
		RULE_indexType = 32, RULE_componentType = 33, RULE_recordType = 34, RULE_fieldList = 35, 
		RULE_fixedPart = 36, RULE_recordSection = 37, RULE_fieldIdentifier = 38, 
		RULE_variantPart = 39, RULE_variantSelector = 40, RULE_tagField = 41, 
		RULE_variant = 42, RULE_tagType = 43, RULE_caseConstantList = 44, RULE_caseConstant = 45, 
		RULE_setType = 46, RULE_baseType = 47, RULE_fileType = 48, RULE_pointerType = 49, 
		RULE_newPointerType = 50, RULE_domainType = 51, RULE_variableDeclarationPart = 52, 
		RULE_variableDeclaration = 53, RULE_variableAccess = 54, RULE_variableIdentifier = 55, 
		RULE_indexedVariable = 56, RULE_fieldDesignator = 57, RULE_pointerVariable = 58, 
		RULE_procedureAndFunctionDeclarationPart = 59, RULE_procedureDeclaration = 60, 
		RULE_procedureHeading = 61, RULE_procedureIdentification = 62, RULE_procedureIdentifier = 63, 
		RULE_procedureBlock = 64, RULE_functionDeclaration = 65, RULE_functionHeading = 66, 
		RULE_functionIdentification = 67, RULE_functionIdentifier = 68, RULE_resultType = 69, 
		RULE_functionBlock = 70, RULE_formalParameterList = 71, RULE_formalParameterSection = 72, 
		RULE_valueParameterSpecification = 73, RULE_variableParameterSpecification = 74, 
		RULE_proceduralParameterSpecification = 75, RULE_functionalParameterSpecification = 76, 
		RULE_conformantArrayParameterSpecification = 77, RULE_valueConformantArraySpecification = 78, 
		RULE_variableConformantArraySpecification = 79, RULE_conformantArraySchema = 80, 
		RULE_packedConformantArraySchema = 81, RULE_unpackedConformantArraySchema = 82, 
		RULE_indexTypeSpecification = 83, RULE_factor = 84, RULE_boundIdentifier = 85, 
		RULE_expression = 86, RULE_simpleExpression = 87, RULE_term = 88, RULE_unsignedConstant = 89, 
		RULE_setConstructor = 90, RULE_memberDesignator = 91, RULE_multiplyingOperator = 92, 
		RULE_addingOperator = 93, RULE_relationalOperator = 94, RULE_booleanExpression = 95, 
		RULE_functionDesignator = 96, RULE_actualParameterList = 97, RULE_actualParameter = 98, 
		RULE_statement = 99, RULE_simpleStatement = 100, RULE_emptyStatement = 101, 
		RULE_assignmentStatement = 102, RULE_procedureStatement = 103, RULE_gotoStatement = 104, 
		RULE_structuredStatement = 105, RULE_statementSequence = 106, RULE_statementPart = 107, 
		RULE_compoundStatement = 108, RULE_conditionalStatement = 109, RULE_ifStatement = 110, 
		RULE_elsePart = 111, RULE_caseStatement = 112, RULE_caseListElement = 113, 
		RULE_caseIndex = 114, RULE_repetitiveStatement = 115, RULE_repeatStatement = 116, 
		RULE_whileStatement = 117, RULE_forStatement = 118, RULE_controlVariable = 119, 
		RULE_initialValue = 120, RULE_finalValue = 121, RULE_withStatement = 122, 
		RULE_recordVariableList = 123, RULE_fieldDesignatorIdentifier = 124, RULE_readParameterList = 125, 
		RULE_readlnParameterList = 126, RULE_writeParameterList = 127, RULE_writeParameter = 128, 
		RULE_writelnParameterList = 129, RULE_program = 130, RULE_programHeading = 131, 
		RULE_programParameterList = 132, RULE_programBlock = 133;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "identifier", "directive", "unsignedNumber", "sign", "block", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constant", "constantIdentifier", "typeDefinitionPart", "typeDefinition", 
			"typeDenoter", "newType", "simpleTypeIdentifier", "structuredTypeIdentifier", 
			"pointerTypeIdentifier", "typeIdentifier", "simpleType", "ordinalType", 
			"newOrdinalType", "ordinalTypeIdentifier", "realTypeIdentifier", "enumeratedType", 
			"identifierList", "subrangeType", "structuredType", "newStructuredType", 
			"unpackedStructuredType", "arrayType", "indexType", "componentType", 
			"recordType", "fieldList", "fixedPart", "recordSection", "fieldIdentifier", 
			"variantPart", "variantSelector", "tagField", "variant", "tagType", "caseConstantList", 
			"caseConstant", "setType", "baseType", "fileType", "pointerType", "newPointerType", 
			"domainType", "variableDeclarationPart", "variableDeclaration", "variableAccess", 
			"variableIdentifier", "indexedVariable", "fieldDesignator", "pointerVariable", 
			"procedureAndFunctionDeclarationPart", "procedureDeclaration", "procedureHeading", 
			"procedureIdentification", "procedureIdentifier", "procedureBlock", "functionDeclaration", 
			"functionHeading", "functionIdentification", "functionIdentifier", "resultType", 
			"functionBlock", "formalParameterList", "formalParameterSection", "valueParameterSpecification", 
			"variableParameterSpecification", "proceduralParameterSpecification", 
			"functionalParameterSpecification", "conformantArrayParameterSpecification", 
			"valueConformantArraySpecification", "variableConformantArraySpecification", 
			"conformantArraySchema", "packedConformantArraySchema", "unpackedConformantArraySchema", 
			"indexTypeSpecification", "factor", "boundIdentifier", "expression", 
			"simpleExpression", "term", "unsignedConstant", "setConstructor", "memberDesignator", 
			"multiplyingOperator", "addingOperator", "relationalOperator", "booleanExpression", 
			"functionDesignator", "actualParameterList", "actualParameter", "statement", 
			"simpleStatement", "emptyStatement", "assignmentStatement", "procedureStatement", 
			"gotoStatement", "structuredStatement", "statementSequence", "statementPart", 
			"compoundStatement", "conditionalStatement", "ifStatement", "elsePart", 
			"caseStatement", "caseListElement", "caseIndex", "repetitiveStatement", 
			"repeatStatement", "whileStatement", "forStatement", "controlVariable", 
			"initialValue", "finalValue", "withStatement", "recordVariableList", 
			"fieldDesignatorIdentifier", "readParameterList", "readlnParameterList", 
			"writeParameterList", "writeParameter", "writelnParameterList", "program", 
			"programHeading", "programParameterList", "programBlock"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", null, null, "'.'", "','", 
			"':'", "';'", null, "'('", "')'", "'<>'", "'<='", "'>='", "':='", "'..'", 
			"'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "ARRAY", "BEGIN", "CASE", "CONST", "DIV", "DO", "DOWNTO", 
			"ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", "LABEL", 
			"MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", "RECORD", 
			"REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", 
			"PLUS", "MINUS", "STAR", "SLASH", "EQUAL", "LESS", "GREATER", "LBRACKET", 
			"RBRACKET", "DOT", "COMMA", "COLON", "SEMICOLON", "POINTER", "LPARENTHESE", 
			"RPARENTHESE", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "ASSIGN", "DOTDOT", 
			"LBRACE", "RBRACE", "NUM_INT", "NUM_REAL", "STRING_LITERAL", "IDENT", 
			"COMMENT1", "COMMENT2", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartRuleContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramParser.EOF, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterStartRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitStartRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitStartRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(268);
			program();
			setState(269);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(GramParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(271);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(GramParser.IDENT, 0); }
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(273);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsignedNumberContext extends ParserRuleContext {
		public TerminalNode NUM_REAL() { return getToken(GramParser.NUM_REAL, 0); }
		public TerminalNode NUM_INT() { return getToken(GramParser.NUM_INT, 0); }
		public UnsignedNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsignedNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterUnsignedNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitUnsignedNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitUnsignedNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnsignedNumberContext unsignedNumber() throws RecognitionException {
		UnsignedNumberContext _localctx = new UnsignedNumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unsignedNumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(275);
			_la = _input.LA(1);
			if ( !(_la==NUM_INT || _la==NUM_REAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(GramParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(GramParser.MINUS, 0); }
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitSign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitSign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(277);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
